Some alignment issues spotted by Phil in show and tell.

--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/winkit.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/winkit.css
@@ -307,6 +307,7 @@ body
 	margin: 0;
 	text-decoration: none;
 	padding-right: 10px;
+	padding-top: 2px;
 }
 
 .dropdownlink-displaytype {
